--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,13 +4,17 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_tax_logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/ic_tax_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.HomeActivity" android:theme="@style/Theme.Design.Light.NoActionBar">
+        <activity android:name=".ui.ActivityCompleteReg" android:theme="@style/AppThemeCompleteProfile">
 
+        </activity>
+        <activity
+            android:name=".ui.HomeActivity"
+            android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,7 +22,9 @@
             </intent-filter>
 
         </activity>
-        <activity android:name=".ui.MainActivity" android:theme="@style/Theme.Design.Light.NoActionBar">
+        <activity
+            android:name=".ui.MainActivity"
+            android:theme="@style/AppTheme">
 
         </activity>
     </application>
